Fixed width overflow issue (CSS)

--- a/static/css/subAuto.css
+++ b/static/css/subAuto.css
@@ -1,5 +1,9 @@
+#past-games-container {
+	margin: 0 auto;
+}
+
 #past-games-container, #future-games-container {
-  width: 600px;
+  width: 550px;
   background-color: white;
   font-family:"Arial",sans-serif;
   color: rgb(75,75,75);
@@ -19,7 +23,7 @@
 }
 
 #past-games-container #past-games-title {
-  font-size: 25px;
+  font-size: 24px;
   color: rgb(75, 75, 75);
   text-align: center;
 }
